ganz: pdf bookmarks

--- a/ganz/master.tex
+++ b/ganz/master.tex
@@ -152,7 +152,7 @@ modes of publication based upon open publication infrastructures.
 
 %body
 \hypertarget{einleitung}{%
-\section*{Einleitung}\label{einleitung}}
+\section{Einleitung}\label{einleitung}}
 
 Die Open-Access-Transformation verändert Rezeptions- und
 Publikationsgewohnheiten wissenschaftlicher Literatur auf vielfältige
@@ -217,7 +217,7 @@ Verfügung gestellten Infrastrukturen in den letzten Jahren aufgebaut
 worden sind.
 
 \hypertarget{fuxfcnf-beispiele-verlagsunabhuxe4ngiger-scholar-led-open-access-journale}{%
-\section*{Fünf Beispiele verlagsunabhängiger, scholar-led
+\section{Fünf Beispiele verlagsunabhängiger, scholar-led
 Open-Access-Journale}\label{fuxfcnf-beispiele-verlagsunabhuxe4ngiger-scholar-led-open-access-journale}}
 
 Im Folgenden zeigen wir anhand von fünf Beispielen Funktionsweisen,
@@ -376,7 +376,7 @@ die oben genannten und ähnliche Zeitschriften einen wichtigen Service
 für ihre jeweiligen Communities.
 
 \hypertarget{geschuxe4ftsmodelle-fuxfcr-open-access-zeitschriften}{%
-\section*{Geschäftsmodelle für
+\section{Geschäftsmodelle für
 Open-Access-Zeitschriften}\label{geschuxe4ftsmodelle-fuxfcr-open-access-zeitschriften}}
 
 Die Diskussion über mögliche Finanzierungsmodelle von
@@ -507,7 +507,7 @@ Auftrag häufig auf einer sehr unsicheren finanziellen Grundlage
 ausführen.
 
 \hypertarget{qualituxe4t-kostet}{%
-\section*{Qualität kostet}\label{qualituxe4t-kostet}}
+\section{Qualität kostet}\label{qualituxe4t-kostet}}
 
 Reputation und Anerkennung wissenschaftlicher Publikationen werden
 gemessen an der Qualität des Inhalts und der Form. In besonderer Weise
@@ -595,7 +595,7 @@ Beispiel durch DFG und BMBF) bereitgestellt werden, aber nachhaltige
 Geschäftsmodelle bisher fehlen.
 
 \hypertarget{empfehlungen-fuxfcr-nachhaltige-publikationsmodelle}{%
-\section*{Empfehlungen für nachhaltige
+\section{Empfehlungen für nachhaltige
 Publikationsmodelle}\label{empfehlungen-fuxfcr-nachhaltige-publikationsmodelle}}
 
 Unsere Beispiele zeigen, dass das Segment der verlagsunabhängigen
@@ -680,14 +680,14 @@ jene Publikationsinfrastrukturen Redaktionen brauchen, die sie für
 qualitativ hochwertigen Inhalte nutzen.
 
 \hypertarget{danksagung}{%
-\section*{Danksagung}\label{danksagung}}
+\section{Danksagung}\label{danksagung}}
 
 Wir danken Max Bergmann, Maike Neufend, Simon Ottersbach und Anita Runge
 für die engagierten Diskussionen und zahlreichen Hinweise zu diesem
 Artikel.
 
 \hypertarget{literatur}{%
-\section*{Literatur}\label{literatur}}
+\section{Literatur}\label{literatur}}
 
 Crawford, Walt 2019: \enquote{Gold Open Access 2013--2018: Articles in
 Journals (GOA4)}. Cites \& Insights Books: Livermore, California.
