--- a/krause/meta.tex
+++ b/krause/meta.tex
@@ -1,7 +1,6 @@
-
 %meta
 
-\fancyhead[L]{R. Gey, K. Leinweber, A. Struck, R. Strötgen, C. Pietsch \\ %author
+\fancyhead[L]{C. Krause \\ %author
 LIBREAS. Library Ideas, 36 (2019). % journal, issue, volume.
 \href{http://nbn-resolving.de/}
 {}} % urn 
@@ -11,20 +10,21 @@ LIBREAS. Library Ideas, 36 (2019). % journal, issue, volume.
 \fancyfoot[L] {\ccLogo \ccAttribution\ \href{https://creativecommons.org/licenses/by/4.0/}{\color{black}Creative Commons BY 4.0}}  %licence
 \fancyfoot[R] {ISSN: 1860-7950}
 
-\title{\LARGE{Workshop @ deRSE19: Libraries for Research Software \& Engineers}} % title
-\author{Ronny Gey, Katrin Leinweber, Alexander Struck, Robert Strötgen, Christian Pietsch} % author
+\title{\LARGE{Was ist Informationswissenschaft und wenn ja, wie viele?}} % title
+\subtitle{\Large{Ein Veranstaltungsbericht}}
+\author{Carmen Krause} % author
 
 \setcounter{page}{1}
 
 \hypersetup{%
-      pdftitle={Workshop @ deRSE19: Libraries for Research Software \& Engineers},
-      pdfauthor={Ronny Gey, Katrin Leinweber, Alexander Struck, \\ Robert Strötgen, Christian Pietsch},
+      pdftitle={Was ist Informationswissenschaft und wenn ja, wie viele? Ein Veranstaltungsbericht},
+      pdfauthor={Carmen Krause},
       pdfcopyright={CC BY 4.0 International},
       pdfsubject={LIBREAS. Library Ideas, 36 (2019).},
-      pdfkeywords={research software, RSE Conference, Research Software Engineer, software engineering, software discovery, research data},
+      pdfkeywords={Informationswissenschaft, Zukunft, BAK, Veranstaltungsbericht},
       pdflicenseurl={https://creativecommons.org/licenses/by/4.0/},
       pdfcontacturl={http://libreas.eu},
       baseurl={http://libreas.eu},
-      pdflang={en},
-      pdfmetalang={en}
+      pdflang={de},
+      pdfmetalang={de}
      }
