Hartmann: pdf bookmarks

--- a/hartmann/master.tex
+++ b/hartmann/master.tex
@@ -240,8 +240,7 @@ Infrastruktureinrichtungen ab (Abschnitt~5) und schließe mit einem Fazit
 samt Ausblick (Abschnitt~6).
 
 \hypertarget{forschungsdaten-in-den-erd--und-umweltwissenschaften}{%
-\section{Forschungsdaten in den Erd- und
-Umweltwissenschaften}\label{forschungsdaten-in-den-erd--und-umweltwissenschaften}}
+\section{Forschungsdaten in den Erd- und Umweltwissenschaften}\label{forschungsdaten-in-den-erd--und-umweltwissenschaften}}
 
 Ein Kennzeichen von Forschungsdaten in den Erd- und Umweltwissenschaften
 ist ihre Heterogenität. Dabei gehen nicht nur verschiedene
@@ -311,8 +310,7 @@ Geodateninfrastrukturen verfügbar~(vergleiche Bernard~\emph{et
 al.}~2016).
 
 \hypertarget{personenbezug-erd--und-umweltwissenschaftlicher-forschungsdaten}{%
-\section{Personenbezug erd- und umweltwissenschaftlicher
-Forschungsdaten}\label{personenbezug-erd--und-umweltwissenschaftlicher-forschungsdaten}}
+\section{Personenbezug erd- und umweltwissenschaftlicher Forschungsdaten}\label{personenbezug-erd--und-umweltwissenschaftlicher-forschungsdaten}}
 
 \enquote{‚Personenbezogene Daten' {[}sind{]} alle Informationen, die
 sich auf eine identifizierte oder identifizierbare Person beziehen}
@@ -393,9 +391,7 @@ zu den Regelungen in den Bereichen Statistik, Sozialstaat, Gesundheit
 und Archivwesen.
 
 \hypertarget{personenbezug-von-raumbezogenen-daten-insbesondere-geodaten---grundsuxe4tzliches}{%
-\subsection{Personenbezug von raumbezogenen Daten, insbesondere Geodaten
--
-Grundsätzliches}\label{personenbezug-von-raumbezogenen-daten-insbesondere-geodaten---grundsuxe4tzliches}}
+\subsection{Personenbezug von raumbezogenen Daten, insbesondere Geodaten -- Grundsätzliches}\label{personenbezug-von-raumbezogenen-daten-insbesondere-geodaten---grundsuxe4tzliches}}
 
 Für die Erd- und Umweltwissenschaften sind raumbezogene Daten von
 besonderer Bedeutung. Wird in der Literatur die Verarbeitung von Daten
@@ -465,9 +461,7 @@ für Katasterdaten jeglichen Personenbezug bestreiten~(Diez~\emph{et
 al.}~2009).
 
 \hypertarget{personenbezug-von-raumbezogenen-daten-insbesondere-geodaten-bisher-vorgeschlagene-pruxfcfverfahren}{%
-\subsection{Personenbezug von raumbezogenen Daten, insbesondere Geodaten
--- bisher vorgeschlagene
-Prüfverfahren}\label{personenbezug-von-raumbezogenen-daten-insbesondere-geodaten-bisher-vorgeschlagene-pruxfcfverfahren}}
+\subsection{Personenbezug von raumbezogenen Daten, insbesondere Geodaten -- bisher vorgeschlagene Prüfverfahren}\label{personenbezug-von-raumbezogenen-daten-insbesondere-geodaten-bisher-vorgeschlagene-pruxfcfverfahren}}
 
 Konkrete Prüfverfahren für den Personenbezug von raumbezogenen Daten
 wurden im Kontext der Umsetzung der INSPIRE-Richtlinie zunächst von zwei
@@ -554,9 +548,7 @@ Weichert 2007). Gerade in diesem für die Erd- und Umweltwissenschaften
 besonders relevanten Bereich besteht also wenig Einigkeit.
 
 \hypertarget{personenbezug-von-geodaten---spezialgesetzliche-regelungen-und-verwaltungsleitfuxe4den}{%
-\subsection{Personenbezug von Geodaten - Spezialgesetzliche Regelungen
-und
-Verwaltungsleitfäden}\label{personenbezug-von-geodaten---spezialgesetzliche-regelungen-und-verwaltungsleitfuxe4den}}
+\subsection{Personenbezug von Geodaten -- Spezialgesetzliche Regelungen und Verwaltungsleitfäden}\label{personenbezug-von-geodaten---spezialgesetzliche-regelungen-und-verwaltungsleitfuxe4den}}
 
 Für den Zugang zu bei Behörden vorliegenden personenbezogenen Geo- und
 Umweltdaten bestehen spezialgesetzliche Regelungen. Das
@@ -596,8 +588,7 @@ Geodaten, die im Rahmen von Forschungsprojekten entstehen keine
 Orientierung bieten.
 
 \hypertarget{diskussion-und-zwischenfazit}{%
-\subsection{Diskussion und
-Zwischenfazit}\label{diskussion-und-zwischenfazit}}
+\subsection{Diskussion und Zwischenfazit}\label{diskussion-und-zwischenfazit}}
 
 Die praxisbezogene Literatur zum Datenschutz in der Forschung behandelt
 schwerpunktmäßig Themen, die in den Erd- und Umweltwissenschaften kaum
@@ -642,8 +633,7 @@ beitragen, ohne dass für allzu viele Fälle der Aufwand einer
 vollständigen juristischen Prüfung nötig wird.
 
 \hypertarget{vertrauliche-daten-in-der-forschungspraxis-der-erd--und-umweltwissenschaften}{%
-\section{Vertrauliche Daten in der Forschungspraxis der Erd- und
-Umweltwissenschaften}\label{vertrauliche-daten-in-der-forschungspraxis-der-erd--und-umweltwissenschaften}}
+\section{Vertrauliche Daten in der Forschungspraxis der Erd- und Umweltwissenschaften}\label{vertrauliche-daten-in-der-forschungspraxis-der-erd--und-umweltwissenschaften}}
 
 Ziel des empirischen Teils dieser Untersuchung war es, relevante
 Fallgruppen von potenziell personenbezogenen Daten in den Erd- und
@@ -721,8 +711,7 @@ nur mit kurzer Beschreibung gelistet, eine ausführliche Analyse liegt
 außerhalb des Untersuchungsbereichs dieses Beitrags.
 
 \hypertarget{typen-uxfcbergreifende-ergebnisse}{%
-\subsection{Typen-übergreifende
-Ergebnisse}\label{typen-uxfcbergreifende-ergebnisse}}
+\subsection{Typen-übergreifende Ergebnisse}\label{typen-uxfcbergreifende-ergebnisse}}
 
 Über alle sechs konstruierten Typen hinweg lässt sich feststellen, dass
 einige Befragte große Unsicherheit darüber äußern, welche Daten
@@ -832,9 +821,7 @@ dieser Art umgegangen wird, fallen folgende Aspekte auf:
 \end{itemize}
 
 \hypertarget{typgruppe-a-abschuxe4tzbare-risiken-bei-geo--und-umweltdaten-aus-naturwissenschaftlicher-feldforschung}{%
-\subsection{Typgruppe A: Abschätzbare Risiken bei Geo- und Umweltdaten
-aus naturwissenschaftlicher
-Feldforschung}\label{typgruppe-a-abschuxe4tzbare-risiken-bei-geo--und-umweltdaten-aus-naturwissenschaftlicher-feldforschung}}
+\subsection{Typgruppe A: Abschätzbare Risiken bei Geo- und Umweltdaten aus naturwissenschaftlicher Feldforschung}\label{typgruppe-a-abschuxe4tzbare-risiken-bei-geo--und-umweltdaten-aus-naturwissenschaftlicher-feldforschung}}
 
 Ein Großteil der potenziell zum Nachteil der Betroffenen
 identifizierbaren Daten, von denen die Befragten berichten, stammt aus
@@ -891,8 +878,7 @@ schränken diese für beide Typen die Nachnutzbarkeit der Daten in der
 Regel massiv ein.
 
 \hypertarget{typgruppe-b-daten-mit-schwer-abzuschuxe4tzenden-risiken}{%
-\subsection{Typgruppe B: Daten mit schwer abzuschätzenden
-Risiken}\label{typgruppe-b-daten-mit-schwer-abzuschuxe4tzenden-risiken}}
+\subsection{Typgruppe B: Daten mit schwer abzuschätzenden Risiken}\label{typgruppe-b-daten-mit-schwer-abzuschuxe4tzenden-risiken}}
 
 Bestimmte Daten wurden nur von einem Teil der Befragten als
 problematisch identifiziert, bereiten aus deren Sicht jedoch besondere
@@ -916,8 +902,7 @@ Informationsgehalts besonderes Interesse an einer Verfügbarkeit der
 Daten für die Nachnutzung.
 
 \hypertarget{typgruppe-c-daten-aus-nicht-naturwissenschaftlichen-methoden}{%
-\subsection{Typgruppe C: Daten aus nicht-naturwissenschaftlichen
-Methoden}\label{typgruppe-c-daten-aus-nicht-naturwissenschaftlichen-methoden}}
+\subsection{Typgruppe C: Daten aus nicht-naturwissenschaftlichen Methoden}\label{typgruppe-c-daten-aus-nicht-naturwissenschaftlichen-methoden}}
 
 In allen Bereichen der Erd- und Umweltwissenschaften kommen nach
 Auskunft der Befragten immer wieder auch nicht-naturwissenschaftliche
@@ -984,8 +969,7 @@ erhobenen Daten zu veröffentlichen und zwar auch dann, wenn diese
 offensichtlich keine Betriebsgeheimnisse enthalten.
 
 \hypertarget{diskussion-und-zwischenfazit-1}{%
-\subsection{Diskussion und
-Zwischenfazit}\label{diskussion-und-zwischenfazit-1}}
+\subsection{Diskussion und Zwischenfazit}\label{diskussion-und-zwischenfazit-1}}
 
 Die Ergebnisse des empirischen Teils bestätigen, dass auch in den -- im
 Diskurs um personenbezogene Forschungsdaten weithin als unverdächtig
@@ -1426,8 +1410,6 @@ Datensicherheit} 33.6, 347ff.
 \textbf{Niklas Hartmann} studierte Umweltwissenschaften in Potsdam und
 Wageningen, Niederlande sowie Wissenschaftssoziologie in Lancaster,
 Großbritannien. Seit 2016 ist er Koordinator Forschungsdaten an der
-Universität Potsdam und Fachreferent in der Universitätsbibliothek.
-
-\url{https://orcid.org/0000-0002-7328-3625}
+Universität Potsdam und Fachreferent in der Universitätsbibliothek. \url{https://orcid.org/0000-0002-7328-3625}
 
 \end{document}
