--- a/hartmann/vita.tex
+++ b/hartmann/vita.tex
@@ -3,6 +3,4 @@
 \textbf{Niklas Hartmann} studierte Umweltwissenschaften in Potsdam und
 Wageningen, Niederlande sowie Wissenschaftssoziologie in Lancaster,
 Großbritannien. Seit 2016 ist er Koordinator Forschungsdaten an der
-Universität Potsdam und Fachreferent in der Universitätsbibliothek.
-
-\url{https://orcid.org/0000-0002-7328-3625}
+Universität Potsdam und Fachreferent in der Universitätsbibliothek. \url{https://orcid.org/0000-0002-7328-3625}
