fix heading dspace artikel

--- a/rajski/abstract.tex
+++ b/rajski/abstract.tex
@@ -1,4 +1,4 @@
-\textbf{Kurzfassung}: DSpace ist eine Open-Source-Software, auf der
+DSpace ist eine Open-Source-Software, auf der
 weltweit circa 45\% der Open-Access-Repositorien basieren (Quelle:
 opendoar.org, 15.10.2019). Im Jahr 2018 gründeten 25 akademische
 Institutionen in Deutschland das DSpace-Konsortium Deutschland mit dem
