fix toc depth using pandoc param --toc-depth=4

--- a/rajski/master.tex
+++ b/rajski/master.tex
@@ -266,7 +266,7 @@ Projektmittel stehen für dauerhafte Finanzierungen nicht zur Verfügung.
 So sind in der Dura\-Space-Registry (Stand Oktober 2019) 43
 DSpace-Installationen in Deutschland eingetragen\footnote{DSpace-Installationen
   in Deutschland siehe
-  \url{https://duraspace.org/registry/?gv/_search=\&filter/_10=DSpace\&filter/_4/_6=Germany\&filter/_3=\&filter/_20=\&filter/_28=\&mode=all}.},
+  \url{https://duraspace.org/registry/?gv_search=\&filter_10=DSpace\&filter_4_6=Germany\&filter_3=\&filter_20=\&filter_28=\&mode=all}.},
 aber bis zur Gründung des deutschen DSpace-Konsortiums 2018 gab es keine
 deutsche Einrichtung, die Mitglied bei DSpace war. Nur die SUB Göttingen
 war bereits Mitglied von DuraSpace, ordnete ihre Mittel aber DuraSpace
