--- a/dldl/master.tex
+++ b/dldl/master.tex
@@ -564,7 +564,7 @@ States? A perspective of library administrators for classifying
 innovations}. In: Journal of Librarianship and Information Science
 (Online First), \url{https://doi.org/10.1177/0961000619871991}
 {[}Paywall{]} {[}OA-Preprint:
-\textless https://trace.tennessee.edu/utk\_infosciepubs/61{]}\textgreater)
+\url{https://trace.tennessee.edu/utk_infosciepubs/61}{]})
 (ks)
 
 \hypertarget{verluxe4ngerte-brexit-edition-zur-krise-der-bibliotheken-in-grossbritannien}{%
