--- a/5fragen/master.tex
+++ b/5fragen/master.tex
@@ -94,7 +94,7 @@ LIBREAS. Library Ideas, 36 (2019). % journal, issue, volume.
 \fancyfoot[L] {\ccLogo \ccAttribution\ \href{https://creativecommons.org/licenses/by/4.0/}{\color{black}Creative Commons BY 4.0}}  %licence
 \fancyfoot[R] {ISSN: 1860-7950}
 
-\title{\LARGE{Fünf Fragen zur Nachhaltigkeit von Forschungsinfrastrukturen}} % title
+\title{\LARGE{Fünf Fragen zur Nachhaltigkeit von Forschungsinfrastrukturen.\\ Zwei Interviews}} % title
 \author{Robert Strötgen, Daniel Beucke, Redaktion LIBREAS} % author
 
 \setcounter{page}{1}
