links zu bilder und untergliederung

--- a/bertino/master.tex
+++ b/bertino/master.tex
@@ -11,7 +11,7 @@ final
 \usepackage[babel]{csquotes}
 \usepackage{synttree}
 \usepackage{graphicx}
-\setkeys{Gin}{width=.4\textwidth} %default pics size
+\setkeys{Gin}{width=.7\textwidth} %default pics size
 
 \graphicspath{{./plots/}}
 \usepackage[ngerman]{babel}
@@ -141,7 +141,7 @@ Forschungsinfrastruktur DARIAH-EU (Digital Research Infrastructure for
 the Arts and Humanities).
 
 \begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
-\noindent
+
 \textbf{Abstract}: The sustainability of a digital research
 infrastructure relies not only on technology, but first and foremost on
 the trust of its users. In turn, this trust results in particular from
@@ -277,7 +277,7 @@ Projekt CLARIAH-DE.\footnote{\url{http://www.clariah.de/} (11.10.19).}
 
 \begin{figure}
 \centering
-\includegraphics[width=0.95\textwidth]{img/DARIAHEntwicklung.jpg}
+\includegraphics{img/DARIAHEntwicklung.jpg}
 \caption{DARIAH-DE Entwicklung (Bild: Jan Rohden, CC BY-SA 4.0)}
 \end{figure}
 
@@ -429,9 +429,9 @@ Anders formuliert: Informationsbedarf soll zu Wissensaufbau und
 
 \begin{figure}
 \centering
-\includegraphics[width=0.95\textwidth]{img/OTRS.jpg}
-\caption{OTRS-System des DARIAH-DE Helpdesks (Screenshot: Andrea Bertino,
-CC BY-SA 4.0)}
+\includegraphics{img/OTRS.jpg}
+\caption{OTRS-System des DARIAH-DE Helpdesks (Screenshot: Andrea
+Bertino, CC BY-SA 4.0)}
 \end{figure}
 
 \hypertarget{personen-oder-queues}{%
@@ -503,7 +503,7 @@ System basiert auf dem Zusammenspiel von zwei Akteuren:
 
 \begin{figure}
 \centering
-\includegraphics[width=0.95\textwidth]{img/Koordinationsstelle.jpg}
+\includegraphics{img/Koordinationsstelle.jpg}
 \caption{Die Rolle der Koordinationsstelle (Bild: Andrea Bertino, CC
 BY-SA 4.0)}
 \end{figure}
@@ -538,7 +538,7 @@ wissenschaftlich honoriert werden kann.
 Koordinationsstelle}\label{zentrale-koordinationsstelle}}
 
 \hypertarget{zusammensetzung-des-teams-kompetenzen}{%
-\section{Zusammensetzung des Teams,
+\subsubsection{Zusammensetzung des Teams,
 Kompetenzen}\label{zusammensetzung-des-teams-kompetenzen}}
 
 Die zentrale Koordinationsstelle ist für die Verteilung der
@@ -555,7 +555,7 @@ Infrastruktur, um eingehende Anfragen ohne Verzögerung den jeweils
 zuständigen Kontaktpersonen zukommen lassen zu können.
 
 \hypertarget{aufgabenspektrum}{%
-\section{Aufgabenspektrum}\label{aufgabenspektrum}}
+\subsubsection{Aufgabenspektrum}\label{aufgabenspektrum}}
 
 Da die Koordinationsstelle somit eine Schnittstelle zwischen NutzerInnen
 und ExpertInnen bildet, muss jedes Mitglied mit dem gesamten Spektrum
