--- a/strecker/meta.tex
+++ b/strecker/meta.tex
@@ -1,3 +1,6 @@
+\appto\UrlBreaks{\do\a\do\b\do\c\do\d\do\e\do\f\do\g\do\h\do\i\do\j
+\do\k\do\l\do\m\do\n\do\o\do\p\do\q\do\r\do\s\do\t\do\u\do\v\do\w
+\do\x\do\y\do\z}
 %meta
 
 \fancyhead[L]{D. Strecker\\ %author
